CHCLibJ2EE

---------------------------------------------------------------------
03a.07
  Add to repository (alpha not complete)
---------------------------------------------------------------------

---------------------------------------------------------------------
Known problems:
---------------------------------------------------------------------
To add/improve:
---------------------------------------------------------------------
Future extensions:
---------------------------------------------------------------------