@@ -2,6 +2,9 @@ CHCLibJ2EE
 
 ---------------------------------------------------------------------
 03a.07
+  Fix: cx.ath.choisnet.servlet.debug.InfosServlet
+---------------------------------------------------------------------
+03a.07
   Add to repository (alpha not complete)
 ---------------------------------------------------------------------
 
